log file stream, sign with envs